data/all_generated_tests/raw_wast_tests/block_StackCorruption_1930.wast
;; 1. **Test Description**: Create a `block` with a valid `blocktype` that requires an input from the stack, but provide insufficient stack elements before entering the block. This tests for stack underflow handling inside the block.    - **Constraint Checked**: Ensures that insufficient operand stack elements before entering a block are correctly identified and handled.    - **Relation to Stack Corruption**: Incorrectly handling such cases can lead to stack corruption due to accessing non-existent stack elements and improper stack state.

(assert_invalid
  (module (func $stack-underflow-block
    (block (param i32) (i32.const 0))
  ))
  "type mismatch"
)